[package]
name = "tps"
version = "1.2.3"
edition = "2021"
description = "Tmux Project Sessioniser - a workflow tool"
license = "MIT"

[lints.clippy]
needless_return = "allow"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.18.1"
tmux_interface = "0.3.1"
directories = "5.0.1"
serde = { version="1.0.190", features = ["derive"] }
toml = "0.8.6"
skim = "0.10.4"
regex = "1.10.2"
itertools = "0.13.0"
chrono = "0.4.38"
